// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard renders standard card 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: '0 4px 4px 0 rgba(0, 0, 0, 0.08), 0 0 4px 0 rgba(0, 0, 0, 0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="card card--standard c0"
>
  <div
    className="image-card--container c1"
  >
    <img
      alt=""
      className="image-card__image c2"
      src="http://localhost/img.png"
    />
    
  </div>
</div>
`;

exports[`ImageCard renders transparent card 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  border-radius: 4px;
  background-color: transparent;
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="card card--transparent c0"
>
  <div
    className="image-card--container c1"
  >
    <img
      alt=""
      className="image-card__image c2"
      src="http://localhost/img.png"
    />
    
  </div>
</div>
`;

exports[`ImageCard renders type = half 1`] = `
.c1 {
  position: relative;
  overflow: hidden;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: '0 4px 4px 0 rgba(0, 0, 0, 0.08), 0 0 4px 0 rgba(0, 0, 0, 0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
}

.c4 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="image-card--container c0"
>
  <div
    className="card card--standard c1"
  >
    <img
      alt=""
      className="image-card__image c2"
      src="http://localhost/img.png"
    />
  </div>
  <div
    className="image-card__caption-container c3"
  >
    <span
      className="image-card__title c4"
    >
      Title
    </span>
    <span
      className="image-card__subtitle c5"
    >
      Sub Title
    </span>
  </div>
</div>
`;

exports[`ImageCard renders with custom image 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: '0 4px 4px 0 rgba(0, 0, 0, 0.08), 0 0 4px 0 rgba(0, 0, 0, 0.16);
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
}

.c4 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="card card--standard c0"
>
  <div
    className="image-card--container c1"
  >
    <svg />
    <div
      className="image-card__overlay c2"
    >
      <div
        className="image-card__caption-container c3"
      >
        <span
          className="image-card__title c4"
        >
          Title
        </span>
        <span
          className="image-card__subtitle c5"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: '0 4px 4px 0 rgba(0, 0, 0, 0.08), 0 0 4px 0 rgba(0, 0, 0, 0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="card card--standard c0"
>
  <div
    className="image-card--container c1"
  >
    <img
      alt=""
      className="image-card__image c2"
      src="http://localhost/img.png"
    />
    <div
      className="image-card__overlay c3"
    >
      <div
        className="image-card__caption-container c4"
      >
        <span
          className="image-card__title c5"
        >
          Title
        </span>
        <span
          className="image-card__subtitle c6"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle, extra content 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: '0 4px 4px 0 rgba(0, 0, 0, 0.08), 0 0 4px 0 rgba(0, 0, 0, 0.16);
}

.c2 {
  width: 100%;
  max-width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="card card--standard c0"
>
  <div
    className="image-card--container c1"
  >
    <img
      alt=""
      className="image-card__image c2"
      src="http://localhost/img.png"
    />
    <div
      className="image-card__overlay c3"
    >
      <div
        className="image-card__caption-container c4"
      >
        <span
          className="image-card__title c5"
        >
          Title
        </span>
        <span
          className="image-card__subtitle c6"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;
